imagedrawer: add cancel button to top panel. Fixes LP #566742. Also: fix the help link's alignment on IE.

--- a/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
+++ b/karl/views/static/tiny_mce/plugins/imagedrawer/css/ui.css
@@ -14,6 +14,28 @@
     display: none;
 }
 
+/* make close button working 
+ * (which is copied from titlebar to top-bar by js)
+ * */
+
+.tiny-imagedrawer-panel-top {
+    position: relative;
+}
+
+.tiny-imagedrawer-panel-top .tiny-imagedrawer-titlebar {
+    margin-right: 30px;
+}
+
+.tiny-imagedrawer-panel-top .tiny-imagedrawer-button-close {
+    position: absolute;
+    height: 19px;
+    width: 18px;
+    padding: 1px;
+    margin: -10px 0 0;
+    right: 0.3em;
+    top: 15px;
+}
+
 /* set back what label overwrites globally */
 .tiny-imagedrawer-panel-info label {
     font-size: 100%;
